# mloqs

./: .gitignore  LICENSE  Pipfile  README.md  _config.yml  bibliography.bib  myst.yml  pyproject.toml
.github/workflows/: build_deploy.yml  build_pdf.yml  trigger_mybinder.sh  trigger_mybinder.yml
chapters/: 00_welcome.ipynb
src/: 00_welcome.md
src/math/: orthogonal_polynomials.md
src/miscellaneous/: glossary.md
src/study_cases/: 00_harmonic_oscillator_state_preparation.ipynb
