[tool.poetry]
name = "mloqs"
version = "0.1.0"
description = "Machine Learning of Quantum Systems"
authors = ["Miguel Costa <miguelptcosta1995@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pandas = "^2.2.3"
python = "^3.12"
seaborn = "^0.13.2"
notebook = "^7.3.2"
jupyter-book = ">=2.0.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
